# a3da

./: .gitignore  Cargo.toml  flake.nix
src/: camera.rs  keyframe.rs  lib.rs  metadata.rs  object.rs
src/ffi/: mod.rs
